# gpt4free

./: .env.example  .gitignore  .kilocodeignore  README.md  conversation.txt  gpt4free.db  gpt4free.db.new  main.py  pyproject.toml
custom-examples/: custom_rest_api.py  image_generation.py  model_info.py  request_log.json  start_inference_api.sh  text_generation.py  web_interface.py
examples/: __init__.py  cli-client-gpt-4.sh  cli.sh  example_reorganized_api.py  gpt4.dev  gpt4free.db  init-database.ps1  init-database.sh  patch_blackbox.py  register_provider.py  requirements.txt  start-factory-proxy.sh  start-inference-api-dev.ps1  start-inference-api-dev.sh  start-inference-api.ps1  start-inference-api.sh  start-test.sh  start-web-interface-dev.sh  start-web-interface.ps1  start-web-interface.sh  update-factory-ai-access-token.py
examples/custom_inference_api/: LMARENABETA_MODEL_INFO.py  PUTERJS_MODEL_INFO.py  __init__.py  create_and_retrieve_conversation.py  init_database.py  init_database_direct.py  init_database_flask.py  model_info.py  run.py  test.py  test_create_conversation.py  test_create_conversation_flask.py  test_message_groups.py  web_interface.py
examples/factory_transparent_proxy/: README.md  __init__.py  create_transparent_proxy.py
examples/provider_models/: ApiAirforce.json  BingCreateImages.json  BlackForestLabs_Flux1Dev.json  BlackForestLabs_Flux1KontextDev.json  Blackbox.json  Cerebras.json  Chatai.json  Cloudflare.json  CohereForAI_C4AI_Command.json  Copilot.json  DeepInfra.json  (+50 more)
g4f/: GEMINI.MD  constants.py  files.py
tests/: cli-test.py
(+84 files in other folders)
